# iced_raycast

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
core/: Cargo.toml
core/src/: lib.rs  search.rs
core/src/application/: linux.rs  macos.rs  mod.rs  windows.rs
core/src/common/: mod.rs
core/src/plugins/: mod.rs
src/: app.rs  design_system.rs  main.rs  prism.rs
src/prism/: component.rs  mod.rs
ui/: Cargo.toml
ui/src/: app.rs  design_system.rs  main.rs
ui/src/prism/: items.rs  keybindings.rs  mod.rs  state.rs  widgets.rs
